// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate snapshot for 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;

exports[`should generate snapshot for multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling 
    $2,544,784.25
  </h3>
</div>
`;
